# backend/docs/swagger.json
@@ -164,6 +164,37 @@
                 }
             }
         },
+        "/v1/hotel/rooms/reservations/confirmed": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получение бронирований, до заезда клиента",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "отель"
+                ],
+                "summary": "Получение бронирований, до заезда клиента",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.ReservationInfo"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/v1/hotel/rooms/reservations/{id}": {
             "patch": {
                 "security": [
@@ -307,6 +338,35 @@
         }
     },
     "definitions": {
+        "entity.ReservationInfo": {
+            "type": "object",
+            "properties": {
+                "check_in": {
+                    "type": "string"
+                },
+                "check_out": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.Room": {
             "type": "object",
             "properties": {
@@ -475,11 +535,11 @@
         "response.RoomInfo": {
             "type": "object",
             "properties": {
-                "is_active": {
-                    "type": "boolean"
-                },
                 "room": {
                     "$ref": "#/definitions/entity.Room"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
